y.output
Terminals unused in grammar

   EQUAL
   END
   UMINUS


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: %empty
    3          | function functions

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    5         | error IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    6         | FUNCTION error SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    7         | FUNCTION IDENT error BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    8         | FUNCTION IDENT SEMICOLON error declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    9         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations error BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

   15 declarations: %empty
   16             | declaration SEMICOLON declarations

   17 declaration: ident COLON INTEGER
   18            | ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   19            | ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   20 ident: IDENT
   21      | IDENT COMMA ident

   22 statements: statement SEMICOLON
   23           | statement SEMICOLON statements

   24 statement: var ASSIGN expressions
   25          | IF bool_expression THEN statements ENDIF
   26          | IF bool_expression THEN statements ELSE statements ENDIF
   27          | WHILE bool_expression BEGINLOOP statements ENDLOOP
   28          | DO BEGINLOOP statements ENDLOOP WHILE bool_expression
   29          | FOR vars ASSIGN NUMBER SEMICOLON bool_expression SEMICOLON vars ASSIGN expressions BEGINLOOP statements ENDLOOP
   30          | READ vars
   31          | WRITE vars
   32          | CONTINUE
   33          | RETURN expressions

   34 bool_expression: relation_and_expression
   35                | relation_and_expression OR relation_and_expression

   36 relation_and_expression: relation_expression
   37                        | relation_expression AND relation_expression

   38 relation_expression: NOT expressions comp expressions
   39                    | NOT TRUE
   40                    | NOT FALSE
   41                    | NOT L_PAREN bool_expression R_PAREN
   42                    | expressions comp expressions
   43                    | TRUE
   44                    | FALSE
   45                    | L_PAREN bool_expression R_PAREN

   46 comp: EQ
   47     | NEQ
   48     | LT
   49     | GT
   50     | GTE
   51     | LTE

   52 var: IDENT
   53    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   54    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET

   55 vars: var
   56     | var COMMA vars

   57 expression: multiplicative_expression
   58           | multiplicative_expression PLUS multiplicative_expression
   59           | multiplicative_expression MINUS multiplicative_expression

   60 expressions: expression

   61 multiplicative_expression: term
   62                          | term MULT term
   63                          | term DIV term
   64                          | term PER term

   65 term: ident L_PAREN expressions R_PAREN
   66     | var
   67     | NUMBER
   68     | L_PAREN expressions R_PAREN
   69     | MINUS var
   70     | MINUS NUMBER
   71     | MINUS L_PAREN expressions R_PAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 5 6 7 8 9 10 11 12 13 14
FUNCTION (258) 4 6 7 8 9 10 11 12 13 14
SEMICOLON (259) 4 5 6 8 9 10 11 12 13 14 16 22 23 29
COMMA (260) 21 56
COLON (261) 17 18 19
READ (262) 30
WRITE (263) 31
MULT (264) 62
DIV (265) 63
PLUS (266) 58
MINUS (267) 59 69 70 71
EQUAL (268)
PER (269) 64
END (270)
FOR (271) 29
CONTINUE (272) 32
L_SQUARE_BRACKET (273) 18 19 53 54
R_SQUARE_BRACKET (274) 18 19 53 54
L_PAREN (275) 41 45 65 68 71
R_PAREN (276) 41 45 65 68 71
BEGIN_PARAMS (277) 4 5 6 7 9 10 11 12 13 14
END_PARAMS (278) 4 5 6 7 8 10 11 12 13 14
BEGINLOOP (279) 27 28 29
ENDLOOP (280) 27 28 29
BEGIN_LOCALS (281) 4 5 6 7 8 9 11 12 13 14
END_LOCALS (282) 4 5 6 7 8 9 10 12 13 14
BEGIN_BODY (283) 4 5 6 7 8 9 10 11 13 14
END_BODY (284) 4 5 6 7 8 9 10 11 12 13
INTEGER (285) 17 18 19
ARRAY (286) 18 19
OF (287) 18 19
ENDIF (288) 25 26
ELSE (289) 26
IF (290) 25 26
THEN (291) 25 26
WHILE (292) 27 28
DO (293) 28
EQ (294) 46
NEQ (295) 47
LT (296) 48
GT (297) 49
GTE (298) 50
LTE (299) 51
AND (300) 37
OR (301) 35
NOT (302) 38 39 40 41
TRUE (303) 39 43
FALSE (304) 40 44
RETURN (305) 33
ASSIGN (306) 24 29
IDENT (307) 4 5 7 8 9 10 11 12 13 14 20 21 52 53 54
NUMBER (308) 18 19 29 67 70
UMINUS (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
functions (57)
    on left: 2 3, on right: 1 3
function (58)
    on left: 4 5 6 7 8 9 10 11 12 13 14, on right: 3
declarations (59)
    on left: 15 16, on right: 4 5 6 7 8 9 10 11 12 13 14 16
declaration (60)
    on left: 17 18 19, on right: 16
ident (61)
    on left: 20 21, on right: 17 18 19 21 65
statements (62)
    on left: 22 23, on right: 4 5 6 7 8 9 10 11 12 14 23 25 26 27 28
    29
statement (63)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 22 23
bool_expression (64)
    on left: 34 35, on right: 25 26 27 28 29 41 45
relation_and_expression (65)
    on left: 36 37, on right: 34 35
relation_expression (66)
    on left: 38 39 40 41 42 43 44 45, on right: 36 37
comp (67)
    on left: 46 47 48 49 50 51, on right: 38 42
var (68)
    on left: 52 53 54, on right: 24 55 56 66 69
vars (69)
    on left: 55 56, on right: 29 30 31 56
expression (70)
    on left: 57 58 59, on right: 53 54 60
expressions (71)
    on left: 60, on right: 24 29 33 38 42 65 68 71
multiplicative_expression (72)
    on left: 61 62 63 64, on right: 57 58 59
term (73)
    on left: 65 66 67 68 69 70 71, on right: 61 62 63 64


State 0

    0 $accept: . program $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    $end  reduce using rule 2 (functions)

    program    go to state 3
    functions  go to state 4
    function   go to state 5


State 1

    5 function: error . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 6


State 2

    4 function: FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    6         | FUNCTION . error SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    7         | FUNCTION . IDENT error BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    8         | FUNCTION . IDENT SEMICOLON error declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    9         | FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations error BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

    error  shift, and go to state 7
    IDENT  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: functions .

    $default  reduce using rule 1 (program)


State 5

    3 functions: function . functions

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    $end  reduce using rule 2 (functions)

    functions  go to state 10
    function   go to state 5


State 6

    5 function: error IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 11


State 7

    6 function: FUNCTION error . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 12


State 8

    4 function: FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    7         | FUNCTION IDENT . error BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    8         | FUNCTION IDENT . SEMICOLON error declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    9         | FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations error BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

    error      shift, and go to state 13
    SEMICOLON  shift, and go to state 14


State 9

    0 $accept: program $end .

    $default  accept


State 10

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


State 11

    5 function: error IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 15


State 12

    6 function: FUNCTION error SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 16


State 13

    7 function: FUNCTION IDENT error . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 17


State 14

    4 function: FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    8         | FUNCTION IDENT SEMICOLON . error declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    9         | FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations error BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

    error         shift, and go to state 18
    BEGIN_PARAMS  shift, and go to state 19


State 15

    5 function: error IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 21
    declaration   go to state 22
    ident         go to state 23


State 16

    6 function: FUNCTION error SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 24
    declaration   go to state 22
    ident         go to state 23


State 17

    7 function: FUNCTION IDENT error BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 25
    declaration   go to state 22
    ident         go to state 23


State 18

    8 function: FUNCTION IDENT SEMICOLON error . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 26
    declaration   go to state 22
    ident         go to state 23


State 19

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    9         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations error BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 27
    declaration   go to state 22
    ident         go to state 23


State 20

   20 ident: IDENT .
   21      | IDENT . COMMA ident

    COMMA  shift, and go to state 28

    $default  reduce using rule 20 (ident)


State 21

    5 function: error IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 29


State 22

   16 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 30


State 23

   17 declaration: ident . COLON INTEGER
   18            | ident . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   19            | ident . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 31


State 24

    6 function: FUNCTION error SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 32


State 25

    7 function: FUNCTION IDENT error BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 33


State 26

    8 function: FUNCTION IDENT SEMICOLON error declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 34


State 27

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
    9         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . error BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

    error       shift, and go to state 35
    END_PARAMS  shift, and go to state 36


State 28

   21 ident: IDENT COMMA . ident

    IDENT  shift, and go to state 20

    ident  go to state 37


State 29

    5 function: error IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 38


State 30

   16 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 39
    declaration   go to state 22
    ident         go to state 23


State 31

   17 declaration: ident COLON . INTEGER
   18            | ident COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   19            | ident COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 40
    ARRAY    shift, and go to state 41


State 32

    6 function: FUNCTION error SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 42


State 33

    7 function: FUNCTION IDENT error BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 43


State 34

    8 function: FUNCTION IDENT SEMICOLON error declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 44


State 35

    9 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations error . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 45


State 36

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY
   10         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . error declarations END_LOCALS BEGIN_BODY statements END_BODY
   11         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations error BEGIN_BODY statements END_BODY
   12         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS error statements END_BODY
   13         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY error END_BODY
   14         | FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements error

    error         shift, and go to state 46
    BEGIN_LOCALS  shift, and go to state 47


State 37

   21 ident: IDENT COMMA ident .

    $default  reduce using rule 21 (ident)


State 38

    5 function: error IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 48
    declaration   go to state 22
    ident         go to state 23


State 39

   16 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 16 (declarations)


State 40

   17 declaration: ident COLON INTEGER .

    $default  reduce using rule 17 (declaration)


State 41

   18 declaration: ident COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   19            | ident COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 49


State 42

    6 function: FUNCTION error SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 50
    declaration   go to state 22
    ident         go to state 23


State 43

    7 function: FUNCTION IDENT error BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 51
    declaration   go to state 22
    ident         go to state 23


State 44

    8 function: FUNCTION IDENT SEMICOLON error declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 52
    declaration   go to state 22
    ident         go to state 23


State 45

    9 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations error BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)

    declarations  go to state 53
    declaration   go to state 22
    ident         go to state 23


State 46

   10 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS error . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 20

    $default  reduce using rule 15 (declarations)
